# sandpiles

./: .gitignore  Cargo.toml  README.md  rustfmt.toml  sandpile.py  sandpiles.ipynb
csvs/: 2_20_+++.csv  2_20_++.csv  2_20_+.csv  2_20_+_+.csv  2_20_+o.csv  2_20_+x.csv  2_20_::.csv  2_20_;;.csv  2_20_A.csv  2_20_H.csv  2_20_O+.csv  2_20_Y+.csv  2_20_Y.csv  2_20_YY.csv  2_20_o+++.csv  2_20_o+.csv  2_20_o+o.csv  2_20_o-++.csv  2_20_o-+.csv  2_20_o-+x.csv  2_20_o.csv  2_20_o=+.csv  2_20_o_+.csv  2_20_oo.csv  2_20_ox.csv  2_20_sh.csv  2_20_x+.csv  2_20_x.csv  2_20_xo.csv  2_21_++.csv  2_21_+.csv  2_21_+o.csv  2_21_::.csv  2_21_Y.csv  2_21_o+++.csv  2_21_o++.csv  2_21_o+.csv  2_21_o-+.csv  2_21_o.csv  2_21_o=+.csv  (+27 more)
json/+/: 2_10_+.json  2_12_+.json  2_15_+.json  2_16_+.json  2_18_+.json
json/++/: 2_10_++.json  2_12_++.json  2_15_++.json  2_16_++.json
json/+++/: 2_10_+++.json  2_12_+++.json  2_15_+++.json  2_16_+++.json
json/+_+/: 2_10_+_+.json  2_12_+_+.json  2_15_+_+.json  2_16_+_+.json
json/+o/: 2_10_+o.json  2_12_+o.json  2_15_+o.json  2_16_+o.json
json/+x/: 2_10_+x.json  2_12_+x.json  2_15_+x.json  2_16_+x.json
json/::/: 2_10_::.json  2_12_::.json  2_15_::.json  2_16_::.json
json/;;/: 2_10_;;.json  2_12_;;.json  2_15_;;.json  2_16_;;.json
json/A/: 2_10_A.json  2_12_A.json  2_15_A.json  2_16_A.json
json/H/: 2_10_H.json  2_12_H.json  2_15_H.json  2_16_H.json
json/Y/: 2_10_Y.json  2_12_Y.json  2_15_Y.json  2_16_Y.json
json/o+++/: 2_10_o+++.json  2_12_o+++.json  2_15_o+++.json  2_16_o+++.json
src/: grid.rs  lib.rs  main.rs  patterns.rs
(+55 files in other folders)
