[package]
name = "sandpiles"
version = "0.3.0"
authors = ["sminez <innes.andersonmorrison@gmail.com>"]
edition = "2021"

[profile.release-lto]
inherits = "release"
lto = true

[dependencies]
anyhow = "1.0.66"
bincode = "1.3.3"
clap = { version = "4.0.26", features = ["derive"] }
colorgrad = "0.6.2"
fnv = "1.0.7"
plotters = "0.3.4"
rayon = "1.6.0"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
